Fix dark mode print

--- a/_sass/pro/_dark-mode.scss
+++ b/_sass/pro/_dark-mode.scss
@@ -4,7 +4,7 @@
     --gray-bg: rgba(255,255,255,.033);
     --gray-text: rgba(255,255,255,.625);
     --menu-text: rgba(255,255,255,.25);
-    --body-color: #d8d8d8;
+    --body-color: #eee;
     --body-bg: #{hsl(hue($theme-color), 12.5%, 20%)};
     --border-color: #{hsl(hue($theme-color), 12.5%, 35%)};
   }
